--- a/assets/Info.plist
+++ b/assets/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIconFile</key>
-	<string>MultiRecorderVideo.icns</string>
+	<string>Monochrome.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string></string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -40,7 +40,7 @@
 				<string>dat</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-				<string>MultiRecorderVideo.icns</string>
+				<string>Monochrome.icns</string>
 			<key>CFBundleTypeMIMETypes</key>
 				<string>application/octet-stream</string>
 			<key>CFBundleTypeName</key>
