--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,7 +4,13 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.12"
-
+  apt_packages:
+    - mesa-utils
+    - libxrandr-dev
+    - libxcursor-dev
+    - libxi-dev
+    - libxinerama-dev
+    - libgl1-mesa-dev
 sphinx:
   configuration: docs/conf.py
   builder: "dirhtml"
