--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,6 +6,7 @@ build:
     python: "3.12"
   apt_packages:
     - mesa-utils
+    - libwayland-dev
     - libxrandr-dev
     - libxcursor-dev
     - libxi-dev
