--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,9 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: "ubuntu-24.04"
   tools:
-    python: "3.12"
+    python: "3.13"
   apt_packages:
     - mesa-utils
     - libwayland-dev
@@ -12,6 +12,7 @@ build:
     - libxi-dev
     - libxinerama-dev
     - libgl1-mesa-dev
+    - libxkbcommon-dev
 sphinx:
   configuration: docs/conf.py
   builder: "dirhtml"
