--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ test = [
     "pytest"
 ]
 "docs" = [
-    "sphinx",
+    "sphinx==8.1.3",  # enum-tools bug
     "sphinxcontrib-napoleon",
     "sphinxcontrib-bibtex",
     "sphinxcontrib-video",
