--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -229,6 +229,8 @@ jobs:
     environment: release
     permissions:
       contents: write
+      attestations: write
+      id-token: write
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - name: Download artifacts
@@ -238,7 +240,22 @@ jobs:
           path: dist
           merge-multiple: true
 
+      - name: Attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-path: |
+            ${{ github.workspace }}/dist/*.AppImage
+            ${{ github.workspace }}/dist/*.exe
+            ${{ github.workspace }}/dist/*.dmg
+
       - name: Upload release assets
         uses: softprops/action-gh-release@v1
         with:
+          files: dist/*
+
+      - name: VirusTotal Scan
+        uses: crazy-max/ghaction-virustotal@v4
+        with:
+          vt_api_key: ${{ secrets.VT_API_KEY }}
+          update_release_body: true
           files: dist/*
