--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ monochrome = "monochrome.ipc:console_entrypoint"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 sdist.include = ["src/python/monochrome/_version.py"]
 cmake.version = ">=3.12"
-cmake.verbose = true
+build.verbose = true
 cmake.args = [
         "-DSTATIC_GCC:BOOL=ON",
         "-DDISABLE_MACOS_BUNDLE:BOOL=ON",
