--- a/assets/Info.plist.in
+++ b/assets/Info.plist.in
@@ -1,133 +1,239 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
-	<key>CFBundleExecutable</key>
-	<string>Monochrome</string>
-	<key>CFBundleGetInfoString</key>
-	<string>Monochrome, a viewer for monochromatic video and image data</string>
-	<key>CFBundleIconFile</key>
-	<string>Monochrome.icns</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.janlebert.monochrome</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleLongVersionString</key>
-	<string>${MACOSX_BUNDLE_LONG_VERSION_STRING}</string>
-	<key>CFBundleName</key>
-	<string>Monochrome</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>${MACOSX_BUNDLE_SHORT_VERSION_STRING}</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>${MACOSX_BUNDLE_BUNDLE_VERSION}</string>
-	<key>CSResourcesFileMapped</key>
-	<true/>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2025 Jan Lebert. This software is released under the MIT License.</string>
-	<key>CFBundleDocumentTypes</key>
-	<array>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-				<string>Viewer</string>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>dat</string>
-			</array>
-			<key>CFBundleTypeIconFile</key>
-				<string>Monochrome.icns</string>
-			<key>CFBundleTypeMIMETypes</key>
-				<string>application/octet-stream</string>
-			<key>CFBundleTypeName</key>
-				<string>Binary File</string>
-			<key>CFBundleTypeOSTypes</key>
-			<array>
-				<string>****</string>
-			</array>
-			<key>LSHandlerRank</key>
-            <string>Default</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-				<string>Viewer</string>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>npy</string>
-			</array>
-			<key>CFBundleTypeIconFile</key>
-				<string>npy-logo.icns</string>
-			<key>CFBundleTypeMIMETypes</key>
-				<string>application/x-numpy-data</string>
-			<key>CFBundleTypeName</key>
-				<string>NumPy data file</string>
-			<key>CFBundleTypeOSTypes</key>
-			<array>
-				<string>****</string>
-			</array>
-			<key>LSHandlerRank</key>
-            <string>Default</string>
-		</dict>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Viewer</string>
-            <key>CFBundleTypeExtensions</key>
-            <array>
-                <string>jpg</string>
-                <string>jpeg</string>
-                <string>JPG</string>
-                <string>JPEG</string>
-            </array>
-            <key>CFBundleTypeIconFile</key>
-            <string>Monochrome.icns</string>
-            <key>CFBundleTypeMIMETypes</key>
-            <string>image/jpeg</string>
-            <key>CFBundleTypeName</key>
-            <string>JPEG image</string>
-            <key>LSHandlerRank</key>
-            <string>Alternate</string>
-        </dict>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Viewer</string>
-            <key>CFBundleTypeExtensions</key>
-            <array>
-                <string>png</string>
-                <string>PNG</string>
-            </array>
-            <key>CFBundleTypeIconFile</key>
-            <string>Monochrome.icns</string>
-            <key>CFBundleTypeMIMETypes</key>
-            <string>image/png</string>
-            <key>CFBundleTypeName</key>
-            <string>PNG image</string>
-            <key>LSHandlerRank</key>
-            <string>Alternate</string>
-        </dict>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Viewer</string>
-            <key>CFBundleTypeExtensions</key>
-            <array>
-                <string>tiff</string>
-                <string>tif</string>
-                <string>TIFF</string>
-                <string>TIF</string>
-            </array>
-            <key>CFBundleTypeIconFile</key>
-            <string>Monochrome.icns</string>
-            <key>CFBundleTypeMIMETypes</key>
-            <string>image/tiff</string>
-            <key>CFBundleTypeName</key>
-            <string>TIFF image</string>
-            <key>LSHandlerRank</key>
-            <string>Alternate</string>
-        </dict>
-	</array>
-</dict>
+    <dict>
+        <key>CFBundleDevelopmentRegion</key>
+        <string>English</string>
+        <key>CFBundleExecutable</key>
+        <string>Monochrome</string>
+        <key>CFBundleGetInfoString</key>
+        <string>Monochrome, a viewer for monochromatic video and image data</string>
+        <key>CFBundleIconFile</key>
+        <string>Monochrome.icns</string>
+        <key>CFBundleIdentifier</key>
+        <string>com.janlebert.monochrome</string>
+        <key>CFBundleInfoDictionaryVersion</key>
+        <string>6.0</string>
+        <key>CFBundleLongVersionString</key>
+        <string>${MACOSX_BUNDLE_LONG_VERSION_STRING}</string>
+        <key>CFBundleName</key>
+        <string>Monochrome</string>
+        <key>CFBundlePackageType</key>
+        <string>APPL</string>
+        <key>CFBundleShortVersionString</key>
+        <string>${MACOSX_BUNDLE_SHORT_VERSION_STRING}</string>
+        <key>CFBundleSignature</key>
+        <string>????</string>
+        <key>CFBundleVersion</key>
+        <string>${MACOSX_BUNDLE_BUNDLE_VERSION}</string>
+        <key>CSResourcesFileMapped</key>
+        <true/>
+        <key>NSHumanReadableCopyright</key>
+        <string>Copyright © 2025 Jan Lebert. This software is released under the MIT License.</string>
+        <key>UTExportedTypeDeclarations</key>
+        <array>
+            <dict>
+                <key>UTTypeIdentifier</key>
+                <string>com.mpids.bmp.multirecorder.raw-data</string>
+                <key>UTTypeDescription</key>
+                <string>Monochrome Raw Data</string>
+                <key>UTTypeConformsTo</key>
+                <array>
+                    <string>public.data</string>
+                </array>
+                <key>UTTypeTagSpecification</key>
+                <dict>
+                    <key>public.filename-extension</key>
+                    <array>
+                        <string>dat</string>
+                    </array>
+                    <key>public.mime-type</key>
+                    <string>application/octet-stream</string>
+                </dict>
+            </dict>
+            <dict>
+                <key>UTTypeIdentifier</key>
+                <string>org.numpy.raw-data</string>
+                <key>UTTypeDescription</key>
+                <string>NumPy Data</string>
+                <key>UTTypeConformsTo</key>
+                <array>
+                    <string>public.data</string>
+                </array>
+                <key>UTTypeTagSpecification</key>
+                <dict>
+                    <key>public.filename-extension</key>
+                    <array>
+                        <string>npy</string>
+                    </array>
+                    <key>public.mime-type</key>
+                    <string>application/x-numpy-data</string>
+                </dict>
+            </dict>
+            <dict>
+                <key>UTTypeIdentifier</key>
+                <string>org.nema.dicom</string>
+                <key>UTTypeDescription</key>
+                <string>DICOM Image</string>
+                <key>UTTypeConformsTo</key>
+                <array>
+                    <string>public.data</string>
+                    <string>public.image</string>
+                </array>
+                <key>UTTypeTagSpecification</key>
+                <dict>
+                    <key>public.filename-extension</key>
+                    <array>
+                        <string>dcm</string>
+                        <string>dicom</string>
+                    </array>
+                    <key>public.mime-type</key>
+                    <array>
+                       <string>application/dicom</string>
+                    </array>
+                </dict>
+            </dict>
+        </array>
+        <key>CFBundleDocumentTypes</key>
+        <array>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>dat</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>Monochrome.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>application/octet-stream</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>Binary File</string>
+                <key>CFBundleTypeUTIs</key>
+                <array>
+                    <string>com.mpids.bmp.multirecorder.raw-data</string>
+                </array>
+                <key>LSHandlerRank</key><string>Default</string>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>npy</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>npy-logo.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>application/x-numpy-data</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>NumPy data file</string>
+                <key>CFBundleTypeUTIs</key>
+                <array>
+                    <string>org.numpy.raw-data</string>
+                </array>
+                <key>LSHandlerRank</key><string>Default</string>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>tiff</string>
+                    <string>tif</string>
+                    <string>TIFF</string>
+                    <string>TIF</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>Monochrome.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>image/tiff</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>TIFF image</string>
+                <key>LSHandlerRank</key>
+                <string>Alternate</string>
+                <key>CFBundleTypeUTIs</key>
+                <array>
+                    <string>public.tiff</string>
+                </array>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>jpg</string>
+                    <string>jpeg</string>
+                    <string>JPG</string>
+                    <string>JPEG</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>Monochrome.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>image/jpeg</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>JPEG image</string>
+                <key>LSHandlerRank</key>
+                <string>Alternate</string>
+                <key>CFBundleTypeUTIs</key>
+                <array>
+                    <string>public.jpeg</string>
+                </array>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>png</string>
+                    <string>PNG</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>Monochrome.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>image/png</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>PNG image</string>
+                <key>LSHandlerRank</key>
+                <string>Alternate</string>
+                <key>CFBundleTypeUTIs</key>
+                <array>
+                    <string>public.png</string>
+                </array>
+            </dict>
+            <dict>
+                <key>CFBundleTypeRole</key>
+                <string>Viewer</string>
+                <key>CFBundleTypeExtensions</key>
+                <array>
+                    <string>dcm</string>
+                </array>
+                <key>CFBundleTypeIconFile</key>
+                <string>Monochrome.icns</string>
+                <key>CFBundleTypeMIMETypes</key>
+                <array>
+                    <string>application/dicom</string>
+                    <string>image/dicom</string>
+                </array>
+                <key>CFBundleTypeName</key>
+                <string>DICOM Image</string>
+                <key>LSItemContentTypes</key>
+                <array>
+                    <string>org.nema.dicom</string>
+                </array>
+                <key>LSHandlerRank</key>
+                <string>Default</string>
+            </dict>
+        </array>
+    </dict>
 </plist>
