--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
     needs: [build_python_wheels]
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
         python-version: ["3.8", "3.13"]
 
     steps:
@@ -49,7 +49,7 @@ jobs:
       - name: Download wheels
         uses: actions/download-artifact@v4
         with:
-          name: python-wheels-${{ runner.os }}
+          name: python-wheels-${{ runner.os }}-${{ runner.arch }}
           path: dist
 
       - name: Set up Python
