--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,9 +99,11 @@ manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
 [tool.cibuildwheel.linux]
 before-all = "yum install -y wayland-devel libxkbcommon-devel libXcursor-devel libXi-devel libXinerama-devel libXrandr-devel mesa-libGL-devel libdwarf-devel binutils-devel dbus-devel curl zip unzip tar"
 before-build = "git clone --depth 1 https://github.com/microsoft/vcpkg.git /tmp/vcpkg && /tmp/vcpkg/bootstrap-vcpkg.sh"
+repair-wheel-command = "auditwheel repair --exclude 'libdbus-1.so*' --exclude 'libGLX.so*' --exclude 'libOpenGL.so*' --lib-sdir . -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux.environment]
 VCPKG_ROOT="/tmp/vcpkg"
+VCPKG_TARGET_TRIPLET="x64-linux-release"
 CMAKE_TOOLCHAIN_FILE="/tmp/vcpkg/scripts/buildsystems/vcpkg.cmake"
 
 [tool.cibuildwheel.macos]
@@ -114,7 +116,7 @@ VCPKG_ROOT="/tmp/vcpkg"
 CMAKE_TOOLCHAIN_FILE="/tmp/vcpkg/scripts/buildsystems/vcpkg.cmake"
 
 [tool.cibuildwheel.windows.environment]
-VCPKG_TARGET="x64-windows-static-md-release"
+VCPKG_TARGET_TRIPLET="x64-windows-static-md-release"
 CMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
 
 [tool.ruff]
