--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install dependencies
+        if: runner.os == 'Linux'
+        run: |
+          yum install mesa-libGL-devel dbus-devel
+
       - name: Install Pytest
         run: python -m pip install pytest
 
