--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Install dependencies
         if: runner.os == 'Linux'
         run: |
-          yum install mesa-libGL-devel dbus-devel
+          sudo apt update && sudo apt install -y libglvnd0 libdbus-1-3 libopengl0
 
       - name: Install Pytest
         run: python -m pip install pytest
